--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <li style="margin-top:0.25em"><a href="https://speakerdeck.com/daisukekanaizumi" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">SpeakerDeck</a></li></ul>
 
-<h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#research-interest" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Research Interest</h2>
+<h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#research-interest" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Research Interests</h2>
 
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>Scientific Computing and Numerical Analysis/Algorithms (Computer Arithmetic, Numerical Integration, Root-Finding Algorithms, Computer-Assisted Proofs and&nbsp;<a href="https://en.m.wikipedia.org/wiki/Validated_numerics" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Validated Numerics</a>)</li>
 
