--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>VIA ESI (Exploring Social Innovation, VIA Programs) 2014 @ San Francisco, United States</li>
 
-<li style="margin-top:0.25em">ASEP (Asian Student Environment Platform, IEON Environmental Foundation) 2014 @ Beijing, People's Republic of China</li></ul>
+<li style="margin-top:0.25em">ASEP (Asian Student Environment Platform, IEON Environmental Foundation) 2014 @ Beijing, Tianjin, Chengdu and Inner Mongolia (People's Republic of China)</li></ul>
 
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#educational-experience" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Educational Experiences</h2>
 
