--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <li style="margin-top:0.25em">Japan Statistical Society Certificate Grade 2 (2015, November)</li>
 
-<li style="margin-top:0.25em">Sudoku Certificate/数独1級 (2019, April)</li></ul>
+<li style="margin-top:0.25em">Sudoku Certificate/数独検定1級 (2019, April)</li></ul>
 
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#awards" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Awards</h2>
 
