--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 <h3 style="margin-top:24px;margin-bottom:16px;font-size:1.25em;line-height:1.25;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji">October</h3>
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li><a href="https://hsiftokyo.hitachi/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Hitachi Social Innovation Forum 2019</a></li>
 <li style="margin-top:0.25em"><a href="https://eeas.europa.eu/delegations/japan_en/67129/Women%20of%20Mathematics:%20A%20Gallery%20of%20Portraits" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Women in Mathematics: A Gallery of Portraits @ EU Delegation in Japan</a></li>
-<li style="margin-top:0.25em"><a href="https://mathsoc.jp/administration/career/kouryukai2019.html" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">MSJ Multi-Disciplinary Exchange Section</a></li></ul>
+<li style="margin-top:0.25em"><a href="https://mathsoc.jp/administration/career/kouryukai2019.html" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">MSJ Multi-Disciplinary Exchange Section at the University of Tokyo</a></li></ul>
 </div>
 
 
