--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#related-links" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Related Links</h2>
 
-<ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li><a href="https://try.gitea.io/Daisuke-Kanaizumi" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">Gitea</a></li>
+<ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px">
+<li><a href="https://waseda.academia.edu/DaisukeKanaizumi" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">academia.edu</a></li>
+
+<li><a href="https://try.gitea.io/Daisuke-Kanaizumi" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">Gitea</a></li>
 
 <li><a href="https://gitlab.com/Daisuke-Kanaizumi" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">GitLab</a></li>
 
