--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 <li style="margin-top:0.25em">Mathematics of Simulation (MATLAB class, 1 semester)</li>
 
-<li style="margin-top:0.25em">Math Q&amp;A ＠Waseda (1.5 years)</li>
+<li style="margin-top:0.25em">Math Q&amp;A ＠Waseda (1.5 years, October 2017-January 2019)</li>
 
 <li style="margin-top:0.25em">Math &amp; English tutor at an online prep school (2 years)</li></ul>
 
