--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 <li style="margin-top:0.25em"><a href="https://kmaruno.wixsite.com/marunolab" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Waseda Soliton Lab</a>&nbsp;(Nonlinear Wave &amp; Applied Integrable System Group) @ Department of Pure and Applied Mathematics &amp;&nbsp;<a href="http://www.dms.sci.waseda.ac.jp/index-e.html" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Department of Materials Science</a>&nbsp;(April 2016-March 2019)</li>
 
-<li style="margin-top:0.25em"><a href="https://www2.jsiam.org/en/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Japan Society for Industrial and Applied Mathematics</a>&nbsp;(Since October 2017)</li></ul>
+<li style="margin-top:0.25em"><a href="https://www2.jsiam.org/en/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Japan Society for Industrial and Applied Mathematics</a>&nbsp;(Since October 2017)</li>
 
 <li style="margin-top:0.25em"><a href="https://sudokujapan.com/english/" rel="nofollow" style="color:rgb(3,102,214)">Japan Sudoku Association</a>&nbsp;(Since November 2019)</li></ul>
 </div>
