--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 <li style="margin-top:0.25em"><a href="https://www2.jsiam.org/en/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Japan Society for Industrial and Applied Mathematics</a>&nbsp;(Since October 2017)</li>
 
-<li style="margin-top:0.25em"><a href="https://sudokujapan.com/english/" rel="nofollow" style="color:rgb(3,102,214)">Japan Sudoku Association</a>&nbsp;(Since November 2019)</li></ul>
+<li style="margin-top:0.25em"><a href="https://sudokujapan.com/english/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Japan Sudoku Association</a>&nbsp;(Since November 2019)</li></ul>
 </div>
 
 <h1 style="margin:24px 0px 16px;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji">Places Where I Visited</h1>
