--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>Scientific Computing and Numerical Analysis/Algorithms (Computer Arithmetic, Numerical Integration, Root-Finding Algorithms, Computer-Assisted Proofs and&nbsp;<a href="https://en.m.wikipedia.org/wiki/Validated_numerics" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Validated Numerics</a>)</li>
 
-<li style="margin-top:0.25em">Quantum Calculus ($q$-Calculus, post quantum calculus)</li>
+<li style="margin-top:0.25em">Quantum Calculus ($q$-Calculus, post quantum calculus, Hahn calculus)</li>
 
 <li style="margin-top:0.25em">Special Functions (Functions of matrices, orthogonal polynomials and their $q$-analogs, the family of gamma functions, $q$-Bessel functions and basic/elliptic hypergeometric series)</li></ul>
 
