--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=EUC-JP">
 <script type="text/javascript" src="http://gc.kis.scr.kaspersky-labs.com/1B74BD89-2A22-4B93-B451-1C9E1052A0EC/main.js" charset="UTF-8"></script>
 </head>
-<h1 style="margin-right:0px;margin-bottom:16px;margin-left:0px;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;margin-top:0px!important">Biography</h1>
+<h1 style="margin-right:0px;margin-bottom:16px;margin-left:0px;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;margin-top:0px!important">Biography/Biographie</h1>
 
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px">
 <li>Went to Hualalai Academy (Currently known as <a href="https://makualani.com/" rel="nofollow noreferrer noopener" target="_blank">Makua Lani Christian Academy</a> and <a href="https://kuleanaeducation.weebly.com/" rel="nofollow noreferrer noopener" target="_blank">Kuleana Education Academy</a>)</li>
@@ -59,13 +59,13 @@
 
 <li style="margin-top:0.25em">Special Functions (Functions of matrices, orthogonal polynomials and their $q$-analogs, the family of gamma functions, $q$-Bessel functions and basic/elliptic hypergeometric series)</li></ul>
 
-<h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#publications" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Publications</h2>
+<h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#publications" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Publications/Veröffentlichungen</h2>
 
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li><a href="https://catalog.lib.kyushu-u.ac.jp/opac_download_md/1957507/Article_07.pdf" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">RIAM 2017 Report</a></li>
 
 <li style="margin-top:0.25em"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/blob/master/documents_slides/2019/master_Kanaizumi.pdf" style="color:rgb(3,102,214);outline-width:0px">Master Thesis</a></li></ul>
 
-<h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#licenses" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Licenses</h2>
+<h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#licenses" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Licenses/Lizenzen</h2>
 
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>Test in Practical English Proficiency Grade 2 (2005, July)</li>
 
@@ -85,7 +85,7 @@
 
 <li style="margin-top:0.25em">ASEP (Asian Student Environment Platform, IEON Environmental Foundation) 2014 @ Beijing, Tianjin, Chengdu and Inner Mongolia (People's Republic of China)</li></ul>
 <div>
-<h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji">Volunteer Experiences</h2>
+<h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji">Volunteer Experiences/Freiwillige</h2>
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>General Affairs and Public Relations at&nbsp;<a href="https://sites.google.com/a/viaprograms.org/via-next-innovators-homepage/english-version" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">VIA Next Innovators</a> (August 2015-March 2020)</li>
 <li style="margin-top:0.25em">Alumni Ambassador at&nbsp;<a href="https://viaprograms.org/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">VIA Programs</a>&nbsp;(November 2017-November 2018)</li></ul>
 </div>
@@ -102,7 +102,7 @@
 
 <div>
 
-<h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji">Memberships</h2>
+<h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji">Memberships/Mitgliedschaften</h2>
 
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>Waseda Go Club (October 2013-March 2019)</li>
 
