--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <h1 style="margin-right:0px;margin-bottom:16px;margin-left:0px;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;margin-top:0px!important">Biography/Biographie</h1>
 
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px">
+<li>English Name: Derek</li>
 <li>Went to Hualalai Academy (Currently known as <a href="https://makualani.com/" rel="nofollow noreferrer noopener" target="_blank">Makua Lani Christian Academy</a> and <a href="https://kuleanaeducation.weebly.com/" rel="nofollow noreferrer noopener" target="_blank">Kuleana Education Academy</a>)</li>
 <li>Obtained Master of Engineering at the Graduate School of Waseda University, Supervised by&nbsp;<a href="https://kmaruno.wixsite.com/marunolab" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Waseda Soliton Lab</a>&nbsp;&nbsp;(Nonlinear Wave &amp; Applied Integrable System Group)&nbsp;and others @ Department of Pure and Applied Mathematics &amp;&nbsp;<a href="http://www.dms.sci.waseda.ac.jp/index-e.html" rel="nofollow" style="color:rgb(3,102,214)">Department of Materials Science</a>&nbsp;(2019, March)</li></ul>
 
