--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Co-Founder of &nbsp;<a href="https://sites.google.com/a/viaprograms.org/via-next
 
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>VIA ESI (Exploring Social Innovation, VIA Programs) 2014 @ San Francisco, United States</li>
 
-<li style="margin-top:0.25em">ASEP (Asian Student Environment Platform, IEON Environmental Foundation) 2014 @ Beijing, Tianjin, Chengdu and Inner Mongolia (People's Republic of China)</li></ul>
+<li style="margin-top:0.25em">ASEP (Asian Student Environment Platform, AEON Environmental Foundation) 2014 @ Beijing, Tianjin, Chengdu and Inner Mongolia (People's Republic of China)</li></ul>
 <div>
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji">Volunteer Experiences/Freiwillige</h2>
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>Co-Founder, Website Administrator, Social Media Manager, Learning Cafe Organizer, General Affairs and Public Relations at&nbsp;<a href="https://sites.google.com/a/viaprograms.org/via-next-innovators-homepage/english-version" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">VIA Next Innovators</a> (Since August 2015)</li>
@@ -113,7 +113,7 @@ Co-Founder of &nbsp;<a href="https://sites.google.com/a/viaprograms.org/via-next
 
 <li style="margin-top:0.25em"><a href="http://www.ipsj.or.jp/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">IPSJ</a>&nbsp;(April 2014-March 2016)</li>
 
-<li style="margin-top:0.25em"><a href="https://www2.jsiam.org/en/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Japan Society for Industrial and Applied Mathematics</a>&nbsp;(Since October 2017)</li>
+<li style="margin-top:0.25em"><a href="https://www2.jsiam.org/en/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Japan Society for Industrial and Applied Mathematics</a>&nbsp;(2017-2018)</li>
 
 <li style="margin-top:0.25em"><a href="https://sudokujapan.com/english/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Japan Sudoku Association</a>&nbsp;(Since November 2019)</li></ul>
 </div>
