--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <li>Went to Hualalai Academy (Currently known as <a href="https://makualani.com/" rel="nofollow noreferrer noopener" target="_blank">Makua Lani Christian Academy</a> and <a href="https://kuleanaeducation.weebly.com/" rel="nofollow noreferrer noopener" target="_blank">Kuleana Education Academy</a>)</li>
 <li>Obtained Master of Engineering at the Graduate School of Waseda University, Supervised by&nbsp;<a href="https://kmaruno.wixsite.com/marunolab" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Waseda Soliton Lab</a>&nbsp;&nbsp;(Nonlinear Wave &amp; Applied Integrable System Group)&nbsp;and others @ Department of Pure and Applied Mathematics &amp;&nbsp;<a href="http://www.dms.sci.waseda.ac.jp/index-e.html" rel="nofollow" style="color:rgb(3,102,214)">Department of Materials Science</a>&nbsp;(2019, March)</li>
 <li>
-Co-Founder of &nbsp;<a href="https://sites.google.com/a/viaprograms.org/via-next-innovators-homepage/english-version" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">VIA Next Innovators</a>
+Co-Founder and former representative of &nbsp;<a href="https://sites.google.com/a/viaprograms.org/via-next-innovators-homepage/english-version" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">VIA Next Innovators</a>
 </li>
 </ul>
 
