--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@ Co-Founder and former representative of &nbsp;<a href="https://sites.google.com/
 
 <li style="margin-top:0.25em">ASEP (Asian Student Environment Platform, AEON Environmental Foundation) 2014 @ Beijing, Tianjin, Chengdu and Inner Mongolia (People's Republic of China)</li></ul>
 <div>
-<h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji">Volunteer Experiences/Freiwillige</h2>
+<h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji">Volunteer and Internship Experiences/Freiwillige</h2>
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>Co-Founder, Website Administrator, Social Media Manager, Learning Cafe Organizer, General Affairs and Public Relations at&nbsp;<a href="https://sites.google.com/a/viaprograms.org/via-next-innovators-homepage/english-version" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">VIA Next Innovators</a> (Since August 2015)</li>
-<li style="margin-top:0.25em">Alumni Ambassador at&nbsp;<a href="https://viaprograms.org/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">VIA Programs</a>&nbsp;(November 2017-November 2018)</li></ul>
+<li style="margin-top:0.25em">Alumni Ambassador at&nbsp;<a href="https://viaprograms.org/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">VIA Programs</a>&nbsp;(November 2017-November 2018)</li>
+<li style="margin-top:0.25em">Science media internship at POL (May 2018-November 2018)</li>
+</ul>
 </div>
 
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#educational-experience" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Educational Experiences</h2>
