--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     displayIndent: "2em"
   });
 </script>
+<meta name="google-site-verification" content="vL6F5d5ny5uubaFPSXjq1LUNrRQwFsoMkqcY3nqsd98" />
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <META http-equiv="Content-Type" content="text/html; charset=ISO-2022-JP">
 <META http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
