--- a/index.html
+++ b/index.html
@@ -47,42 +47,20 @@ Co-Founder and former representative of &nbsp;<a href="https://sites.google.com/
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#related-links" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Related Links</h2>
 
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px">
-<li><a href="https://waseda.academia.edu/DaisukeKanaizumi" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">academia.edu</a></li>
 
 <li><a href="https://try.gitea.io/Daisuke-Kanaizumi" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">Gitea</a></li>
 
 <li><a href="https://gitlab.com/Daisuke-Kanaizumi" rel="nofollow" style="color:rgb(3,102,214);outline-width:0px">GitLab</a></li>
 
-<li><a href="https://scholar.google.co.jp/citations?user=wELjodgAAAAJ&amp;hl=ja&amp;authuser=1" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Google Scholar Citations</a></li>
-
 <li style="margin-top:0.25em"><a href="https://www.linkedin.com/in/daisuke-kanaizumi-70b95015a/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">LinkedIn</a></li>
 
-<li style="margin-top:0.25em"><a href="https://www.mendeley.com/profiles/daisuke-kanaizumi/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Mendeley</a></li>
-
-<li style="margin-top:0.25em"><a href="https://orcid.org/0000-0002-9534-3289" rel="nofollow" style="color:rgb(3,102,214)">ORCID</a></li>
-
 <li style="margin-top:0.25em"><a href="https://qiita.com/Daisuke-Kanaizumi" rel="nofollow" style="color:rgb(3,102,214)">Qiita</a></li>
-
-<li style="margin-top:0.25em"><a href="https://www.researchgate.net/profile/Daisuke_Kanaizumi" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">ResearchGate</a></li>
 
 <li style="margin-top:0.25em"><a href="https://www.slideshare.net/DaisukeKanaizumi" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">SlideShare</a></li>
 
 <li style="margin-top:0.25em"><a href="https://speakerdeck.com/daisukekanaizumi" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">SpeakerDeck</a></li></ul>
 
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#research-interest" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Academic Interests</h2>
-
-<ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>Scientific Computing and Numerical Analysis/Algorithms (Computer Arithmetic, Numerical Integration, Root-Finding Algorithms, Computer-Assisted Proofs and&nbsp;<a href="https://en.m.wikipedia.org/wiki/Validated_numerics" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Validated Numerics</a>)</li>
-
-<li style="margin-top:0.25em">Quantum Calculus ($q$-Calculus, post quantum calculus, Hahn calculus)</li>
-
-<li style="margin-top:0.25em">Special Functions (Functions of matrices, orthogonal polynomials and their $q$-analogs, the family of gamma functions, $q$-Bessel functions and basic/elliptic hypergeometric series)</li></ul>
-
-<h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#publications" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Publications/Veröffentlichungen</h2>
-
-<ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li><a href="https://catalog.lib.kyushu-u.ac.jp/opac_download_md/1957507/Article_07.pdf" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">RIAM 2017 Report</a></li>
-
-<li style="margin-top:0.25em"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/blob/master/documents_slides/2019/master_Kanaizumi.pdf" style="color:rgb(3,102,214);outline-width:0px">Master Thesis</a></li></ul>
-
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#licenses" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Licenses/Lizenzen</h2>
 
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>Test in Practical English Proficiency Pre-Grade 2 (2004, November), Grade 2 (2005, July)</li>
@@ -109,6 +87,19 @@ Co-Founder and former representative of &nbsp;<a href="https://sites.google.com/
 <li style="margin-top:0.25em">Science media internship at POL (May 2018-November 2018)</li>
 </ul>
 </div>
+
+
+<ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>Scientific Computing and Numerical Analysis/Algorithms (Computer Arithmetic, Numerical Integration, Root-Finding Algorithms, Computer-Assisted Proofs and&nbsp;<a href="https://en.m.wikipedia.org/wiki/Validated_numerics" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Validated Numerics</a>)</li>
+
+<li style="margin-top:0.25em">Quantum Calculus ($q$-Calculus, post quantum calculus, Hahn calculus)</li>
+
+<li style="margin-top:0.25em">Special Functions (Functions of matrices, orthogonal polynomials and their $q$-analogs, the family of gamma functions, $q$-Bessel functions and basic/elliptic hypergeometric series)</li></ul>
+
+<h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#publications" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Publications/Veröffentlichungen</h2>
+
+<ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li><a href="https://catalog.lib.kyushu-u.ac.jp/opac_download_md/1957507/Article_07.pdf" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">RIAM 2017 Report</a></li>
+
+<li style="margin-top:0.25em"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/blob/master/documents_slides/2019/master_Kanaizumi.pdf" style="color:rgb(3,102,214);outline-width:0px">Master Thesis</a></li></ul>
 
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#educational-experience" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Educational Experiences</h2>
 
@@ -167,7 +158,7 @@ Co-Founder and former representative of &nbsp;<a href="https://sites.google.com/
 <h3 style="margin-top:24px;margin-bottom:16px;font-size:1.25em;line-height:1.25;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#november" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>November</h3>
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li><a href="https://sites.google.com/site/riamnonlinearwavemeeting2017/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">RIAM 2017</a></li>
 <li style="margin-top:0.25em"><a href="http://www.f.waseda.jp/martin/conf/2017SGlectures3.html" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Lectures on The Riemann-Hilbert method</a></li>
-<li style="margin-top:0.25em">第14回早稲田大学数学・応用数理談話会 (千葉先生の講演)</li>
+<li style="margin-top:0.25em">第14回数学・応用数理談話会</li>
 <li style="margin-top:0.25em">UTNAS #092 By&nbsp;<a href="http://www.na.scitec.kobe-u.ac.jp/~a-ishikawa/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Ai Ishikawa</a></li></ul>
 <h3 style="margin-top:24px;margin-bottom:16px;font-size:1.25em;line-height:1.25;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#december" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>December</h3>
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li><a href="https://www.wolfram.com/events/wolfram-conference-japan/2017/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Wolfram Conference JIKEI</a></li>
@@ -181,7 +172,7 @@ Co-Founder and former representative of &nbsp;<a href="https://sites.google.com/
 <h3 style="margin-top:24px;margin-bottom:16px;font-size:1.25em;line-height:1.25;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#january" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>January</h3>
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li><a href="https://sites.google.com/a/rikkyo.ac.jp/mathphys/seminar_archive_2017" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Rikkyo Mathematical Physics Seminar</a></li>
 <li style="margin-top:0.25em"><a href="http://mathusers.jp/index.php?action=journal_view_main_detail&amp;block_id=37&amp;p_id=147&amp;nc_session=e1b75b92dfc90dd6feaad5ebeb27ef17" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">JMUG</a></li>
-<li style="margin-top:0.25em"><a href="http://suuri.st/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">すうりすと</a>-By Kazushige Endo</li></ul>
+<li style="margin-top:0.25em"><a href="http://suuri.st/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">すうりすと</a></li></ul>
 <h3 style="margin-top:24px;margin-bottom:16px;font-size:1.25em;line-height:1.25;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#march-1" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>March</h3>
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li><a href="https://sites.google.com/site/seminarsyrais/home/seminar03" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">3rd Applied Integrable Systems Youth Seminar</a></li>
 <li style="margin-top:0.25em"><a href="http://www.ims.sci.waseda.ac.jp/imgs_events/20180306_Kickoff.pdf" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Waseda Research Institute for Science and Engineering Institute for Mathematical Science Kickoff Meeting</a>-<a href="https://www.maths.manchester.ac.uk/~higham/talks/waseda18.pdf" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Nicholas Higham's Talk</a></li>
@@ -192,7 +183,7 @@ Co-Founder and former representative of &nbsp;<a href="https://sites.google.com/
 <li style="margin-top:0.25em">UTNAS #112 #113 #115</li></ul>
 <h3 style="margin-top:24px;margin-bottom:16px;font-size:1.25em;line-height:1.25;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#march-2" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>March</h3>
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li><a href="http://wakate.jsiam.org/index.php?%E7%AC%AC4%E5%9B%9E%E5%AD%A6%E7%94%9F%E7%A0%94%E7%A9%B6%E7%99%BA%E8%A1%A8%E4%BC%9A" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">JSIAM Student Presentation Section 2019 at the University of Tsukuba</a></li>
-<li style="margin-top:0.25em"><a href="https://sites.google.com/site/wasedawakateibunya/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">早稲田大学数学若手異分野交流会</a></li>
+<li style="margin-top:0.25em"><a href="https://sites.google.com/site/wasedawakateibunya/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">数学若手異分野交流会</a></li>
 <li style="margin-top:0.25em"><a href="http://suuri.st/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">すうりすと</a></li></ul>
 <h3 style="margin-top:24px;margin-bottom:16px;font-size:1.25em;line-height:1.25;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#september-1" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>September</h3>
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li><a href="https://annual2019.jsiam.org/" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">JSIAM 2019 Annual Meeting at the University of Tokyo</a></li>
