--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ Co-Founder and former representative of &nbsp;<a href="https://sites.google.com/
 </li>
 <li>Obtained Master of Engineering at the Graduate School of Waseda University, Supervised by&nbsp;<a href="https://kmaruno.wixsite.com/marunolab" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Waseda Soliton Lab</a>&nbsp;&nbsp;(Nonlinear Wave &amp; Applied Integrable System Group)&nbsp;and others @ Department of Pure and Applied Mathematics &amp;&nbsp;<a href="http://www.dms.sci.waseda.ac.jp/index-e.html" rel="nofollow" style="color:rgb(3,102,214)">Department of Materials Science</a>&nbsp;(2019, March)</li>
 </ul>
-<iframe src="https://www.slideshare.net/VIANextInnovators/slideshelf" width="615px" height="470px" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:none;" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe><iframe src="https://slides.com/vianextinnovatorstokyo/deck-8fa65d/embed" width="550" height="420" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
+<iframe src="https://www.slideshare.net/VIANextInnovators/slideshelf" width="615px" height="470px" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:none;" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>
+<iframe src="https://slides.com/vianextinnovatorstokyo/deck-8fa65d/embed" width="550" height="420" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <script async class="speakerdeck-embed" data-id="fcd6cf2574f74269b46d77092b3f826c" data-ratio="1.33333" src="//speakerdeck.com/assets/embed.js"></script>
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;pa
 dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#related-links" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Related Links</h2>
