--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" id="arve"
-    xmlns:og="http://opengraphprotocol.org/schema/"
-    xmlns:fb="http://www.facebook.com/2008/fbml">
+<html lang="en-US" id="arve">
 <head>
 <meta name="google-site-verification" content="vL6F5d5ny5uubaFPSXjq1LUNrRQwFsoMkqcY3nqsd98" />
 <!-- Google Tag Manager -->
