--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" id="arve">
+<html lang="en-US">
 <head>
 <meta name="google-site-verification" content="vL6F5d5ny5uubaFPSXjq1LUNrRQwFsoMkqcY3nqsd98" />
 <!-- Google Tag Manager -->
