--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <li>
 Co-Founder and former representative of &nbsp;<a href="https://sites.google.com/a/viaprograms.org/via-next-innovators-homepage/english-version" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">VIA Next Innovators</a>
 </li>
-<li>Obtained Master of Engineering at the Graduate School of Waseda University, Supervised by&nbsp;<a href="https://kmaruno.wixsite.com/marunolab" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Waseda Soliton Lab</a>&nbsp;&nbsp;(Nonlinear Wave &amp; Applied Integrable System Group)&nbsp;and others @ Department of Pure and Applied Mathematics &amp;&nbsp;<a href="http://www.dms.sci.waseda.ac.jp/index-e.html" rel="nofollow" style="color:rgb(3,102,214)">Department of Materials Science</a>&nbsp;(2019, March)</li>
+<li>Obtained Master of Engineering at the Graduate School of Waseda University (2019, March)</li>
 </ul>
 <iframe src="https://www.slideshare.net/VIANextInnovators/slideshelf" width="615px" height="470px" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:none;" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>
 <iframe src="https://slides.com/vianextinnovatorstokyo/deck-8fa65d/embed" width="550" height="420" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
