--- a/index.html
+++ b/index.html
@@ -99,6 +99,16 @@ dding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);
 <a data-flickr-embed="true" data-header="true" data-footer="true" href="https://www.flickr.com/photos/viaprograms/albums/72157673226823833" title="Friends of VIA"><img src="https://live.staticflickr.com/5676/30934820350_6d7c47d776_z.jpg" width="640" height="213" alt="Friends of VIA"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 </div>
 
+ <div id="ajaxContent"></div>
+  <script>
+  var Webflow = Webflow || [];
+  Webflow.push(function() {
+    $.get('https://cdn.rawgit.com/VIA-Next-Innovators/Documents/master/202001.tex', function(data) {
+      $('#ajaxContent').append(data);
+    });
+  });
+  </script>
+
 <h2 style="margin-top:24px;margin-bottom:16px;font-size:1.5em;line-height:1.25;padding-bottom:0.3em;border-bottom:1px solid rgb(234,236,239);color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji"><a href="https://github.com/Daisuke-Kanaizumi/q-special-functions/wiki/About-Me#research-interest" style="background-color:initial;color:rgb(3,102,214);float:left;padding-right:4px;line-height:1"></a>Academic Interests</h2>
 
 <ul style="padding-left:2em;margin-top:0px;margin-bottom:16px;color:rgb(36,41,46);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px"><li>Scientific Computing and Numerical Analysis/Algorithms (Computer Arithmetic, Numerical Integration, Root-Finding Algorithms, Computer-Assisted Proofs and&nbsp;<a href="https://en.m.wikipedia.org/wiki/Validated_numerics" rel="nofollow" style="background-color:initial;color:rgb(3,102,214)">Validated Numerics</a>)</li>
